--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -1,7 +1,7 @@
 - title: Intro to git & GitHub
   event_type: Workshop
   description: It's a 3 hours hands on workshop which will be conducted by our club for all students to learn Git & GitHub.
-  imageLinks: https://drive.google.com/uc?export=view&id=1QhMncrImQXgaSDBtPUwRSf3AifeEwaB3
+  imageLinks: https://raw.githubusercontent.com/clubgamma/assets/master/Events/Intro%20to%20Git%20%26%20Github/Poster/master.jpg?token=ANS54QCVXSKETNGPDDXJ2OK7H6PGQ
   date: 2020-08-22
   time: 4:30 PM
   venue: Google Meet
@@ -11,7 +11,7 @@
    - name: Rudra Barad
      post: Graphics Designer
      image: https://user-images.githubusercontent.com/57007680/89312793-50a9d500-d695-11ea-8c7b-324c099370b8.png
-     session: Basic of GitHub
+     designation: Member at ClubGamma
      linkedin: https://www.linkedin.com/in/rudra-barad/
      twitter: https://twitter.com/rudraabarad
      github: https://github.com/rudrabarad
@@ -19,7 +19,7 @@
    - name: Chirayu Joshi
      post: Web Expert
      image: https://user-images.githubusercontent.com/57007680/89312810-56071f80-d695-11ea-9b49-dd2d96c78952.png
-     session: Handson session
+     designation: Member at ClubGamma
      linkedin: https://www.linkedin.com/in/chirayu-joshi-154b3317b/
      twitter: https://twitter.com/chirayu_joshi_
      github: https://github.com/chirayu-joshi
