--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -1,7 +1,7 @@
 - title: Intro to git & GitHub
   event_type: Workshop
   description: It's a 3 hours hands on workshop which will be conducted by our club for all students to learn Git & GitHub.
-  imageLinks: https://raw.githubusercontent.com/clubgamma/assets/master/Events/Intro%20to%20Git%20%26%20Github/Poster/master.jpg?token=ANS54QCVXSKETNGPDDXJ2OK7H6PGQ
+  imageLinks: https://user-images.githubusercontent.com/57007680/90880337-f1063600-e3c5-11ea-9c69-6a6efa1a876c.jpg
   date: 2020-08-22
   time: 4:30 PM
   venue: Google Meet
