--- a/General data/team_details.yml
+++ b/General data/team_details.yml
@@ -1,1 +1,48 @@
-  - Data coming soon: 
+- name: Jay Khatri
+  position: GITHUB CAMPUS EXPERT
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/jay-khatri-min.jpg
+  post: Founder
+  linkedin: https://www.linkedin.com/in/jayskhatri/
+  instagram: https://www.instagram.com/jay.s.khatri/
+  twitter: https://twitter.com/jayskhatri
+  github: https://github.com/jayskhatri/
+- name: Harsh Jobanputra
+  position: MENTOR
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/harsh-jobanputra-min.png
+  post: Founder
+  linkedin: https://www.linkedin.com/in/harsh-jobanputra-0b1020179/
+  instagram: https://www.instagram.com/harshjobanputra.apk
+  twitter: https://twitter.com/harshMJ2201
+  github: https://github.com/harsh2201
+- name: Isha Khimsurya
+  position: MENTOR
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/isha-khimsurya-min.jpg
+  post: Founder
+  linkedin: https://www.linkedin.com/in/ishakhimsurya/
+  instagram: https://www.instagram.com/ishavk05/
+  twitter: https://twitter.com/ishavk05
+  github: https://github.com/ishakhimsurya
+- name: Yash Paneliya
+  position: CLUB MANAGER
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/yash-paneliya-min.png
+  post: Member
+  linkedin: https://www.linkedin.com/in/yashpaneliya/
+  instagram: https://www.instagram.com/_yashh_paneliya_/
+  twitter: https://twitter.com/yashhpaneliya
+  github: https://github.com/yashpaneliya
+- name: Dhruv Patel
+  position: CLUB MANAGER
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/dhruv-patel-min.jpeg
+  post: Member
+  linkedin: https://www.linkedin.com/in/dhruvpatel1706/
+  instagram: https://www.instagram.com/dhruv17.06/
+  twitter: https://twitter.com/dhruvpatel1706
+  github: https://github.com/dhruvpatel1706
+- name: Jay Khatri
+  position: GITHUB CAMPUS EXPERT
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/jay-khatri-min.jpg
+  post: Founder
+  linkedin: https://www.linkedin.com/in/jayskhatri/
+  instagram: https://www.instagram.com/jay.s.khatri/
+  twitter: https://twitter.com/jayskhatri
+  github: https://github.com/jayskhatri/
