Team Data Added

--- a/General data/team_details.yml
+++ b/General data/team_details.yml
@@ -38,11 +38,51 @@
   instagram: https://www.instagram.com/dhruv17.06/
   twitter: https://twitter.com/dhruvpatel1706
   github: https://github.com/dhruvpatel1706
-- name: Jay Khatri
-  position: GITHUB CAMPUS EXPERT
-  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/jay-khatri-min.jpg
-  post: Founder
-  linkedin: https://www.linkedin.com/in/jayskhatri/
-  instagram: https://www.instagram.com/jay.s.khatri/
-  twitter: https://twitter.com/jayskhatri
-  github: https://github.com/jayskhatri/
+- name: Rudra Barad
+  position: GRAPHIC DESIGNER
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/rudra-barad-min.jpg
+  post: Member
+  linkedin: https://www.linkedin.com/in/rudra-barad/
+  instagram: https://www.instagram.com/rudra.barad/
+  twitter: https://twitter.com/rudraabarad
+  github: https://github.com/rudrabarad
+- name: Saumya Shah
+  position: GRAPHIC DESIGNER
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/saumya-shah-min.jpg
+  post: Member
+  linkedin: https://www.linkedin.com/in/saumya-shah-9bb0aa1a5/
+  instagram: https://www.instagram.com/saumya.shah.26/
+  twitter: https://github.com/saumya2610
+  github: https://twitter.com/Saumya2610
+- name: Chirayu Joshi
+  position: WEB EXPERT
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/chirayu-joshi-min.jpg
+  post: Member
+  linkedin: https://www.linkedin.com/in/chirayu-joshi-154b3317b/
+  instagram: https://www.instagram.com/chirayujoshi1189/
+  twitter: https://twitter.com/chirayu_joshi_
+  github: https://github.com/chirayu-joshi
+- name: Shubham Raval
+  position: WEB EXPERT
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/shubham-raval-min.jpg
+  post: Member
+  linkedin: https://www.linkedin.com/in/its-shubhamraval/
+  instagram: https://www.instagram.com/iamshubhamraval/
+  twitter: https://twitter.com/iwashomosapien
+  github: https://github.com/shubhamdraval
+- name: Harsh Patel
+  position: Mobile EXPERT
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/harsh-patel-min.jpg
+  post: Member
+  linkedin: https://www.linkedin.cn/mwlite/in/harsh-patel-850b6419a
+  instagram: https://www.instagram.com/harshptl14
+  twitter: https://twitter.com/Harshptl14
+  github: https://github.com/harshptl14
+- name: Shreyanshi Shah
+  position: CONTENT WRITER
+  imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/shreyanshi-shah-min.jpg
+  post: Member
+  linkedin: https://www.linkedin.com/in/shreyanshishah/
+  instagram: https://www.instagram.com/shreyanshi_09/
+  twitter: https://twitter.com/shreyanshi_shah?s=03
+  github: https://github.com/shreyanshi0909
