--- a/General data/team_details.yml
+++ b/General data/team_details.yml
@@ -71,7 +71,7 @@
   twitter: https://twitter.com/iwashomosapien
   github: https://github.com/shubhamdraval
 - name: Harsh Patel
-  position: Mobile EXPERT
+  position: MOBILE EXPERT
   imageurl: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/harsh-patel-min.jpg
   post: Member
   linkedin: https://www.linkedin.cn/mwlite/in/harsh-patel-850b6419a
