--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -2,50 +2,60 @@
    - name: |
         introduction
         Part
-     time: 09:00 AM
-     duration: 1 hr
-     timeduration: 9:00 to 10:00 AM
+     time: 04:30 PM
+     duration: 30 min
+     timeduration: 4:30 to 05:00 PM
      speaker: Rudra Barad
      session: introduction Session
      photo: https://user-images.githubusercontent.com/57007680/89312793-50a9d500-d695-11ea-8c7b-324c099370b8.png
-     discription: You will get the basic knowledge of GitHub.
+     discription: Brief intro of version controlling system.
    - name: Break Time
-     time: 10:00 AM
-     timeduration: 10:00 to 10:05 AM
+     time: 5:00 PM
+     timeduration: 05:00 to 05:05 PM
    - name: |
         Starting with
         GitHub
-     time: 10:05 AM
-     duration: 1 hr
-     timeduration: 10:05 to 11:00 AM
+     time: 05:05 PM
+     duration: 30 min
+     timeduration: 05:05 to 05:35 PM
      speaker: Rudra Barad
      session: Lecture Session
      photo: https://user-images.githubusercontent.com/57007680/89312793-50a9d500-d695-11ea-8c7b-324c099370b8.png
-     discription: You will get the basic knowledge of GitHub, what are the functionality of GitHub, how to create an account, components of GitHub.
+     discription: Basic terms of GitHub and the tour of GitHub Website. You will get to know basic of GitHub!
    - name: Break Time
-     time: 11:00 AM
-     timeduration: 11:00 to 11:05 AM
+     time: 05:35 PM
+     timeduration: 05:35 to 05:40 PM
    - name: |
         Functions of
         GitHub
-     time: 11:05 AM
-     duration: 1 hr
-     timeduration: 11:05 to 11:59 AM
+     time: 05:40 PM
+     duration: 50 min
+     timeduration: 05:40 to 06:30 PM
      speaker: Chirayu Joshi
      session: Hands on Session
      photo: https://user-images.githubusercontent.com/57007680/89312810-56071f80-d695-11ea-9b49-dd2d96c78952.png
-     discription: You will get the basic knowledge of GitHub, what are the functionality of GitHub, how to create an account, components of GitHub.
+     discription: You will get to learn ther basic opreation like create repo, pull, merge etc using GitHub website.
    - name: Break Time
-     time: 12:00 PM
-     timeduration: 12:00 to 12:05 PM
+     time: 06:30 PM
+     timeduration: 06:30 to 06:35 PM
    - name: |
         Git
         CLI
-     time: 12:05 PM
-     duration: 1 hr
-     timeduration: 12:05 to 01:00 PM
+     time: 06:35 PM
+     duration: 30 min
+     timeduration: 06:35 to 07:05 PM
      speaker: Chirayu Joshi
      session: Hands on Session
      photo: https://user-images.githubusercontent.com/57007680/89312810-56071f80-d695-11ea-9b49-dd2d96c78952.png
-     discription: You will get the basic knowledge of GitHub, what are the functionality of GitHub, how to create an account, components of GitHub.
+     discription: You will learn Fuction of GitHub once again but in Command line Interface.
+   - name: |
+        Bonus
+        Session
+     time: 07:05 PM
+     duration: 15 min
+     timeduration: 07:05 to 07:20 PM
+     speaker: Rudra Barad
+     session: Introduction
+     photo: https://user-images.githubusercontent.com/57007680/89312793-50a9d500-d695-11ea-8c7b-324c099370b8.png
+     discription: You will get to know about the GitHub Student Developer Pack and GitHub Pages!
 
