--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -18,7 +18,7 @@
      instagram: https://www.instagram.com/rudra.barad/
    - name: Chirayu Joshi
      post: Web Expert
-     image: https://user-images.githubusercontent.com/57007680/89312810-56071f80-d695-11ea-9b49-dd2d96c78952.png
+     image: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/chirayu-joshi-min.jpg
      designation: Member at ClubGamma
      linkedin: https://www.linkedin.com/in/chirayu-joshi-154b3317b/
      twitter: https://twitter.com/chirayu_joshi_
