--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -58,4 +58,6 @@
      session: Introduction
      photo: https://user-images.githubusercontent.com/57007680/89312793-50a9d500-d695-11ea-8c7b-324c099370b8.png
      discription: You will get to know about the GitHub Student Developer Pack and GitHub Pages!
-
+- agenda:
+- agenda:
+- agenda:
