--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -60,7 +60,7 @@
      discription: You will get to know about the GitHub Student Developer Pack and GitHub Pages!
 - agenda:
    - name: |
-        introduction
+        Nailing
         Part
      time: 04:30 PM
      duration: 30 min
@@ -74,7 +74,7 @@
      timeduration: 05:00 to 05:05 PM
 - agenda:
    - name: |
-        introduction
+        Testing
         Part
      time: 04:30 PM
      duration: 30 min
@@ -88,7 +88,7 @@
      timeduration: 05:00 to 05:05 PM
 - agenda:
    - name: |
-        introduction
+        Into2
         Part
      time: 04:30 PM
      duration: 30 min
