--- a/General data/faq_details.yml
+++ b/General data/faq_details.yml
@@ -1,4 +1,4 @@
-- name: Intro to git & GitHub
+- name: What is Club gamma? What is does?
   detail: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
 - name: Is Club Gamma a profitable organization?
   detail: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
