--- a/General data/gallery_details.yml
+++ b/General data/gallery_details.yml
@@ -2,4 +2,4 @@
   event_type: Workshop
   banner: https://user-images.githubusercontent.com/57007680/89570906-73c6b700-d844-11ea-934f-3021f3bc83b3.png
   date: 22/08/2020
-  images: [https://user-images.githubusercontent.com/57007680/89570906-73c6b700-d844-11ea-934f-3021f3bc83b3.png]
+  images:
