--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -11,7 +11,7 @@
   speakers:
    - name: Rudra Barad
      post: Graphics Designer
-     image: https://user-images.githubusercontent.com/57007680/89312793-50a9d500-d695-11ea-8c7b-324c099370b8.png
+     image: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/rudra-barad-min.jpg
      designation: Member at ClubGamma
      linkedin: https://www.linkedin.com/in/rudra-barad/
      twitter: https://twitter.com/rudraabarad
