--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -25,4 +25,23 @@
      twitter: https://twitter.com/chirayu_joshi_
      github: https://github.com/chirayu-joshi
      instagram: https://www.instagram.com/chirayujoshi1189/
+- title: Nailing Coding Interviews
+  event_type: QnA Session
+  description: This event will be useful for pre-final and final year students as our campus placements are starting. This event will mostly focus on how to nail coding interviews at good product based companies, What care should be taken and how to apply for the interview and getting into it.
+  imageLinks: https://user-images.githubusercontent.com/57007680/90880337-f1063600-e3c5-11ea-9c69-6a6efa1a876c.jpg
+  date: 2020-08-29
+  time: 8:30 PM
+  venue: YouTube Channel
+  hashtag: '#ClubGamma @club_gamma #nailingcodingInterviews'
+  registrationLink: https://forms.gle/yKKVhgtSGF3eQKDUA
+  feedbackLink: 
+  speakers:
+   - name: Anjali Viramgama
+     post: SDE Intern at Facebook
+     image: https://drive.google.com/uc?export=view&id=1oLfFY6JkYzPvWjCBb8yLY_-1rPdHLgis
+     designation: Guest of ClubGamma
+     linkedin: https://www.linkedin.com/in/anjali-viramgama-085285166/
+     twitter: 
+     github: https://github.com/AnjaliGama3
+     instagram: https://www.instagram.com/anjali.gama/
 
