--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -41,7 +41,7 @@
      image: https://drive.google.com/uc?export=view&id=1oLfFY6JkYzPvWjCBb8yLY_-1rPdHLgis
      designation: Guest of ClubGamma
      linkedin: https://www.linkedin.com/in/anjali-viramgama-085285166/
-     twitter: 
+     twitter: https://twitter.com/AnjaliViramgama
      github: https://github.com/AnjaliGama3
      instagram: https://www.instagram.com/anjali.gama/
 
