--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -38,7 +38,7 @@
   speakers:
    - name: Anjali Viramgama
      post: SDE Intern at Facebook
-     image: https://drive.google.com/uc?export=view&id=1oLfFY6JkYzPvWjCBb8yLY_-1rPdHLgis
+     image: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/rudra-barad-min.jpg
      designation: Guest of ClubGamma
      linkedin: https://www.linkedin.com/in/anjali-viramgama-085285166/
      twitter: https://twitter.com/AnjaliViramgama
