--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -58,3 +58,15 @@
      session: Introduction
      photo: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/rudra-barad-min.jpg
      discription: You will get to know about the GitHub Student Developer Pack and GitHub Pages!
+
+- agenda:
+   - name: |
+        QnA 
+        Session
+     time: 08:30 PM
+     duration: 1 hour
+     timeduration: 08:30 PM to 09:30 PM
+     speaker: Anjali Viramgama
+     session: QnA Session
+     photo: https://drive.google.com/uc?export=view&id=1oLfFY6JkYzPvWjCBb8yLY_-1rPdHLgis
+     discription: She will guide us on how to land in top MNC companies and what care should be taken while applying in top companies.
