--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -64,7 +64,7 @@
         Session
      time: 08:30 PM
      duration: 1 hour
-     timeduration: 08:30 PM to 09:30 PM
+     timeduration: 08:30 to 09:30 PM
      speaker: Anjali Viramgama
      session: QnA Session
      photo: https://drive.google.com/uc?export=view&id=1oLfFY6JkYzPvWjCBb8yLY_-1rPdHLgis
