Images added for first event

--- a/General data/gallery_details.yml
+++ b/General data/gallery_details.yml
@@ -2,4 +2,4 @@
   event_type: Workshop
   banner: https://user-images.githubusercontent.com/57007680/89570906-73c6b700-d844-11ea-934f-3021f3bc83b3.png
   date: 22/08/2020
-  images:
+  images: [https://user-images.githubusercontent.com/57007680/91611243-74acbd80-e998-11ea-8832-38a74380f727.png, https://user-images.githubusercontent.com/57007680/91611249-78d8db00-e998-11ea-97fa-20e1b20bfff4.jpg, https://user-images.githubusercontent.com/57007680/91611254-7b3b3500-e998-11ea-86b6-5f8143f44552.jpeg, https://user-images.githubusercontent.com/57007680/91611261-7d9d8f00-e998-11ea-8a1c-5228ed16bf38.png]
