--- a/General data/gallery_details.yml
+++ b/General data/gallery_details.yml
@@ -3,3 +3,8 @@
   banner: https://user-images.githubusercontent.com/57007680/89570906-73c6b700-d844-11ea-934f-3021f3bc83b3.png
   date: 22/08/2020
   images: [https://user-images.githubusercontent.com/57007680/91611243-74acbd80-e998-11ea-8832-38a74380f727.png, https://user-images.githubusercontent.com/57007680/91611249-78d8db00-e998-11ea-97fa-20e1b20bfff4.jpg, https://user-images.githubusercontent.com/57007680/91611254-7b3b3500-e998-11ea-86b6-5f8143f44552.jpeg, https://user-images.githubusercontent.com/57007680/91611261-7d9d8f00-e998-11ea-8a1c-5228ed16bf38.png]
+- title: Nailing Coding Interviews
+  event_type: QnA Session
+  banner: https://user-images.githubusercontent.com/57007680/89572780-3d3e6b80-d847-11ea-825a-b7f86fc1df45.png
+  date: 29/08/2020
+  images:
