--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -1,4 +1,4 @@
-- title: Intro to git & GitHub
+- title: Intro to Git & GitHub
   event_type: Workshop
   description: It's a 3 hours hands on workshop which will be conducted by our club for all students to learn Git & GitHub.
   imageLinks: https://user-images.githubusercontent.com/57007680/90880337-f1063600-e3c5-11ea-9c69-6a6efa1a876c.jpg
