added 3rd workshop⚡

--- a/eventsData/event_details.yml
+++ b/eventsData/event_details.yml
@@ -44,4 +44,22 @@
      twitter: https://twitter.com/AnjaliViramgama
      github: https://github.com/AnjaliGama3
      instagram: https://www.instagram.com/anjali.gama/
-
+- title: Micro-interactions with CSS Animations
+  event_type: Workshop
+  description: This workshop mainly focuses on CSS animations and how to use it on your websites, how to make attractive markdown file for the projects. It is mostly intended to the people who have the clear foundation of CSS. we will cover intermediate to advance level topics of CSS animations.
+  imageLinks: https://user-images.githubusercontent.com/38436564/92870013-0d275100-f421-11ea-857e-40d0acc85ed2.jpg
+  date: 2020-09-13
+  time: 10:00 PM
+  venue: Google Meet
+  hashtag: 'I am attending workshop Microinteractions with CSS Animations of @club_gamma !#ClubGamma #MicroInteractionsCSS'
+  registrationLink: http://bit.ly/e3-reg/
+  feedbackLink: http://bit.ly/e3-post/
+  speakers:
+   - name: Tanisha Sabherwal
+     post: Intern at Goibibo
+     image: https://media-exp1.licdn.com/dms/image/C5103AQE1GaVtngkGtA/profile-displayphoto-shrink_400_400/0?e=1605139200&v=beta&t=V-93_p5lOtvEp715Poo3Sekw5Xf4bXiNBiTqzQssTik
+     designation: Guest Speaker of Club Gamma 
+     linkedin: https://www.linkedin.com/in/tanishasabherwal/
+     twitter: https://twitter.com/tanishaaa03
+     github: https://github.com/tanisha03
+     instagram: https://www.instagram.com/tanisha_sabherwal/
