Added images of second event

--- a/General data/gallery_details.yml
+++ b/General data/gallery_details.yml
@@ -7,4 +7,9 @@
   event_type: QnA Session
   banner: https://user-images.githubusercontent.com/57007680/89572780-3d3e6b80-d847-11ea-825a-b7f86fc1df45.png
   date: 29/08/2020
+  images: [https://user-images.githubusercontent.com/57007680/92912116-1e835400-f447-11ea-86be-7ec0d6fa3157.png, https://user-images.githubusercontent.com/57007680/92912631-98b3d880-f447-11ea-844c-81f2592b978d.png]
+- title: Micro-interactions with CSS Animations
+  event_type: Workshop
+  banner: https://user-images.githubusercontent.com/57007680/92912086-17f4dc80-f447-11ea-9424-3d4c1670ae36.png
+  date: 13/09/2020
   images:
