minor changes in FAQs🔧

--- a/General data/faq_details.yml
+++ b/General data/faq_details.yml
@@ -1,7 +1,7 @@
 - name: What is Club gamma? What is does?
   detail: Club Gamma is a community run by enthusiastic students. We try to engage the students through our events like Workshops, Seminars, Hackathons etc.
 - name: Is there also a website for ClubGamma?
-  detail: Yes, you can visit our website at https://clubgamma.github.io/ for
+  detail: Yes, you can visit our website at https://clubgamma.github.io/
 - name: Do I need to be very good at coding to be a part of Club Gamma ?
   detail: No, We at Club Gamma believe diverse culture of the community. Club Gamma is open to any student, ranging from newbie programmers to experts in industry and other academic disciplines.
 - name: What if my questions are not answered in FAQ's section ?
