--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -112,7 +112,9 @@
      time: 11:40 AM
      duration:  10 min
      timeduration: 11:40 to 11:50 AM
-     speaker: Rudra Barad
+     speaker: Tanisha Sabherwal
      session: Bonus Session
-     photo: https://raw.githubusercontent.com/clubgamma/clubgamma.github.io/master/client/src/assets/images/team_images/rudra-barad-min.jpg
+     photo: https://user-images.githubusercontent.com/57007680/92906665-48864780-f442-11ea-901e-5ecf664fec5f.jpg
      discription: Something amazing is waiting for you, stay stuned for that.
+
+
