--- a/eventsData/events_details.yml
+++ b/eventsData/events_details.yml
@@ -57,7 +57,7 @@
   description: This workshop mainly focuses on CSS animations and how to use it on your websites, how to make attractive markdown file for the projects. It is mostly intended to the people who have the clear foundation of CSS. we will cover intermediate to advance level topics of CSS animations.
   imageLinks: https://user-images.githubusercontent.com/38436564/92870013-0d275100-f421-11ea-857e-40d0acc85ed2.jpg
   date: 2020-09-13
-  time: 10:00 PM
+  time: 10:00 AM
   venue: Google Meet
   hashtag: 'I am attending workshop Microinteractions with CSS Animations of @club_gamma !#ClubGamma #MicroInteractionsCSS'
   registrationLink: http://bit.ly/e3-reg/
