--- a/eventsData/events_details.yml
+++ b/eventsData/events_details.yml
@@ -75,3 +75,17 @@
      twitter: https://twitter.com/tanishaaa03
      github: https://github.com/tanisha03
      instagram: https://www.instagram.com/tanisha_sabherwal/
+- title: Hacktoberfest@ClubGamma
+  event_type: Month-long celebration
+  description: This event will help beginners to get started with opensource contribution. Please visit https://clubgamma.github.io/hacktoberfest for more details/ 
+  imageLinks: https://user-images.githubusercontent.com/38436564/94464408-0ef06300-01dc-11eb-9539-5c288c298661.png
+  date: 2020-10-01
+  time: 00:00 AM
+  venue: GitHub Organization
+  hashtag: 'Get started with opensource by contributing one of the awesome beginner friendly projects on @club_gamma !#ClubGamma #HackAtClubGamma'
+  registrationLink: https://clubgamma.github.io/hacktoberfest
+  feedbackLink: http://bit.ly/e4-post/
+  sponsors:
+   - name: GitHub
+     type: Title Sponsor
+     logo: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
