--- a/eventsData/events_details.yml
+++ b/eventsData/events_details.yml
@@ -89,3 +89,4 @@
    - name: GitHub
      type: Title Sponsor
      logo: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
+  speakers:
