Fixed Typo mistake

--- a/General data/faq_details.yml
+++ b/General data/faq_details.yml
@@ -1,4 +1,4 @@
-- name: What is Club gamma? What is does?
+- name: What is Club gamma? What it does?
   detail: Club Gamma is a community run by enthusiastic students. We try to engage the students through our events like Workshops, Seminars, Hackathons etc.
 - name: Is there also a website for ClubGamma?
   detail: Yes, you can visit our website at https://clubgamma.github.io/
