--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -116,5 +116,4 @@
      session: Bonus Session
      photo: https://user-images.githubusercontent.com/57007680/92906665-48864780-f442-11ea-901e-5ecf664fec5f.jpg
      discription: Something amazing is waiting for you, stay stuned for that.
-
-
+- agenda:
