--- a/eventsData/events_details.yml
+++ b/eventsData/events_details.yml
@@ -90,3 +90,11 @@
      type: Title Sponsor
      logo: https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png
   speakers:
+   - name: 
+     post: 
+     image: 
+     designation: 
+     linkedin: 
+     twitter: 
+     github:
+     instagram: 
