--- a/eventsData/agenda_details.yml
+++ b/eventsData/agenda_details.yml
@@ -119,3 +119,9 @@
 - agenda:
    - name:     
      time: 
+     duration:  
+     timeduration: 
+     speaker:
+     session:
+     photo:
+     discription:
